z-index andf button size fixed

--- a/src/javascript/app/components/App/index.scss
+++ b/src/javascript/app/components/App/index.scss
@@ -147,7 +147,8 @@
   }
 
   .cq-dialog-header-action {
-    line-height: 4.125rem;
+    padding: 0 15px;
+    line-height: 18px;
   }
 }
 
