--- a/src/scss/imports/variables.scss
+++ b/src/scss/imports/variables.scss
@@ -11,7 +11,7 @@ $color-grey-90: #e5e5e5;
 $color-white: #ffffff;
 
 $z-index-edit-component-backdrop: 1;
-$z-index-edit-component: 2;
+$z-index-coral-dialog-preview: 2;
 $z-index-field-wrapper-border: 3;
-$z-index-coral-dialog-preview: 4;
+$z-index-edit-component: 4;
 $z-index-context-menu: 5;
